CAY-2467 New type-aware Property API   - cgen + templates   - tests